[package]
name = "hacker"
version = "0.1.0"
edition = "2024"

[dependencies]
dmf = { git = "https://github.com/ErisianArchitect/dmf.git" }

color-eyre = "0.6.5"
console = { version = "0.16.1", features = ["windows-console-colors"] }
crossterm = "0.29.0"
indicatif = "0.18.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
ropey = "1.6.1"
scopeguard = "1.2.0"
spin_sleep = "1.3.3"
thiserror = "2.0.17"
twox-hash = "2.1.2"
